fixing alignment for abo ut page

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,10 @@ body, html {
     height: auto;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    
+}
+
+.about-image{
     flex: 0 0 50%;
 }
 
